--- a/src/app/md-editor/md-editor.component.html
+++ b/src/app/md-editor/md-editor.component.html
@@ -23,6 +23,11 @@
       </button>
     </div>
     <div class="btn-group">
+      <button class="btn btn-sm btn-default" type="button" title="YouTube link" (click)="insertContent('Youtube')" *ngIf="!_hideIcons.Youtube">
+        <i class="fa fa-youtube"></i>
+      </button>
+    </div>
+    <div class="btn-group">
       <button class="btn btn-sm btn-default" type="button" title="Unordered List" (click)="insertContent('Ul')" *ngIf="!_hideIcons.Ul">
         <i class="fa fa-list-ul"></i>
       </button>
