change bootstrap to angular material

--- a/src/app/md-editor/md-editor.component.css
+++ b/src/app/md-editor/md-editor.component.css
@@ -88,3 +88,15 @@
 .form-check {
   display: inline;
 }
+
+.fullScreenButton {
+  float: right;
+}
+
+#autosave {
+  margin-left: 10px;
+}
+
+.toggleGroup {
+  margin-right: 5px;
+}
